WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207325
Regression: RTCRtpSender.getCapabilities("video") returns null on iOS 13.4 (17E5223h)
https://bugs.webkit.org/show_bug.cgi?id=207325
Summary
Regression: RTCRtpSender.getCapabilities("video") returns null on iOS 13.4 (1...
Dag-Inge Aas
Reported
2020-02-06 04:16:44 PST
If you call RTCRtpSender.getCapabilities("video") on iOS 13.4, it returns null. Previously this returned an object with available codecs. Repro steps: 1. Go to
https://codepen.io/daginge/full/XWbWeWN
on iOS 13.4 2. Accept camera permissions (unsure if this is actually neccessary, but included it anyway) 3. See that "Available codecs" in the log is null. If you test this on 13.3 it returns as expected. Impact: We use this to determine if some legacy devices support H264 on Chrome. This falsely triggered an error message on iOS that H264 is not supported. Workaround: Just assume that iOS 13.4 supports H264 and VP8.
Attachments
Patch
(4.86 KB, patch)
2020-02-11 11:48 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-02-06 08:48:21 PST
<
rdar://problem/59224810
>
youenn fablet
Comment 2
2020-02-06 08:49:27 PST
Seems bad, reproed it for both audio and video.
youenn fablet
Comment 3
2020-02-06 23:38:01 PST
Hum, the current workaround is to instantiate a peer connection and then to call getCapabilities.
youenn fablet
Comment 4
2020-02-11 11:48:10 PST
Created
attachment 390401
[details]
Patch
WebKit Commit Bot
Comment 5
2020-02-11 14:53:14 PST
Comment on
attachment 390401
[details]
Patch Clearing flags on attachment: 390401 Committed
r256377
: <
https://trac.webkit.org/changeset/256377
>
WebKit Commit Bot
Comment 6
2020-02-11 14:53:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug